--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 
         <div class="flex-container">
             <div class="ireneimg"><img id="irene" src="../images/Irene.jpg" height="100px" width="100px"></div>
-            <div><p><b>Art Director</b> - Irene Kotsaki<br>Irene Kotsaki<br>Her love for modern art and fashion,<br> 
+            <div><p><b>Art Director - Irene Kotsaki</b><br>Her love for modern art and fashion,<br> 
                 as well as her passion for hairdressing<br> is reflected in her creations,<br> 
                 that the harmony in color is absolute <br>and this is confirmed daily<br> by his loyal customers<br>
                 She deals with hairdressing from a young age,<br> with studies and seminars in Greece</p></div>
-            <div><p>Technical Advisor<br>Catherine Kotsaki<br>
+            <div><p><b>Technical Advisor - Catherine Kotsaki</b><br>
                 Beloved and beloved <br>for the way she communicates<br> with the people in the <br>hairdresser MEK but at the same time<br> 
                 deeply devoted to beauty, <br>she offers premium services<br> of high level for the care <br>and care of the hair,<br> 
                 the color, the haircut, <br>the hairstyle, the style!<br>
