--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
         <meta charset="UTF-8">
         <meta lang="en-GB">
         <meta name="keywords" content="MEK Hair Studio, Birmingham, hair, cuts, styles, colouring, beard, trim, waxing,
-        07483950113, 01217792743, 39 Station Road, Marston Green, West Midlands, B37 7AB">
-        <meta name="description" content="MEK Hair Studio is a hair salon in Birmingham">
+        07483950113, 01217792743, 39 Station Road, Marston Green, West Midlands, B37 7AB, Irene Kotsaki, Catherine Kotsaki
+         hairdresser, gentleman, lady, beauty salon, tint, wash, blowdry, set, special styling, wedding styling, colour root
+         ,highlights, techniques">
+        <meta name="description" content="MEK Hair Studio is a unisex hairdresser in Birmingham. For more than ten years provides the highest quality 
+                                          services for your hair.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Company - MEK Hair Studio - Birmingham</title>
+        <title>Hairdresser - MEK Hair Studio - Marston Green - Birmingham</title>
         <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="../CSS/topBtn.css">
@@ -47,9 +50,9 @@
         </nav>
 
         <div class="fpic" id="homesection">
-            <img id="fpic" src="../images/first1.JPG" alt="hair studio">
+            <img id="fpic" src="../images/first1.JPG" alt="MEK hair studio">
             <div class="abouttext">
-                <img id="mek" src="../images/meklogo.jpg">
+                <img id="mek" src="../images/meklogo.jpg" alt="MEK Logo">
             </div>
         </div>
 
@@ -67,7 +70,7 @@
 
         <div class="row">
             <div class="column">
-                <img id="cutimg" src="../images/cuts.png" alt="cuts">
+                <img id="cutimg" src="../images/cuts.png" alt="cut">
                 <h6>Cuts</h6>
             </div>
             <div class="column">
@@ -89,7 +92,7 @@
         <div class="team" id="teamsection"><h2>Team</h2></div>
 
         <div class="flex-container">
-            <div class="ireneimg"><img id="irene" src="../images/Irene.jpg" height="100px" width="100px"></div>
+            <div class="ireneimg"><img id="irene" src="../images/Irene.jpg" height="100px" width="100px" alt="Irene Kotsaki"></div>
             <div><p><b>Art Director - Irene Kotsaki</b><br>Her love for modern art and fashion,<br> 
                 as well as her passion for hairdressing<br> is reflected in her creations,<br> 
                 that the harmony in color is absolute <br>and this is confirmed daily<br> by his loyal customers<br>
@@ -99,20 +102,20 @@
                 deeply devoted to beauty, <br>she offers premium services<br> of high level for the care <br>and care of the hair,<br> 
                 the color, the haircut, <br>the hairstyle, the style!<br>
                 Catherine started working as a hairdresser, <br>with studies and seminars in Greece</p></div>
-            <div><img id="katerina" src="..\images\Catherine.jpg" height="100px" width="100px"></div>
+            <div><img id="katerina" src="..\images\Catherine.jpg" height="100px" width="100px" alt="Catherine Kotsaki"></div>
         </div>
 
         <div class="gallery"><h2>Gallery</h2></div>
         <div class="imgcontainer">
-            <img id="img1" src="../images/1.jpg">
-            <img id="img2" src="../images/2.jpg">
-            <img id="img3" src="../images/3.jpg">
-            <img id="img4" src="../images/4.jpg">
-            <img id="img5" src="../images/5.jpg">
-            <img id="img6" src="../images/6.jpg">
-            <img id="img4" src="../images/7.jpg">
-            <img id="img5" src="../images/8.jpg">
-            <img id="img6" src="../images/9.jpg">
+            <img id="img1" src="../images/1.jpg" alt="lady hair styling">
+            <img id="img2" src="../images/2.jpg" alt="hair style">
+            <img id="img3" src="../images/3.jpg" alt="special hair style">
+            <img id="img4" src="../images/4.jpg" alt="straightening style">
+            <img id="img5" src="../images/5.jpg" alt="tint">
+            <img id="img6" src="../images/6.jpg" alt="style">
+            <img id="img4" src="../images/7.jpg" alt="lady cut">
+            <img id="img5" src="../images/8.jpg" alt="lady">
+            <img id="img6" src="../images/9.jpg" alt="gentleman cut">
         </div>
 
         <div class="pricelist" id="pricesection"><h2>Pricelist</h2></div>
@@ -265,7 +268,7 @@
                     </ul>
                     <ul class="columnf">
                         <li class="title">Social Media</li>
-                        <li><a href="https://www.facebook.com/MEK-Hair-Studio-100370185313333"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/MEK-Hair-Studio-100370185313333" target="_blank"><i class="fa fa-facebook"></i></a></li>
                     </ul>
                 </div>
             </div>
