--- a/index.html
+++ b/index.html
@@ -107,10 +107,14 @@
 
         <div class="gallery"><h2>Gallery</h2></div>
         <div class="imgcontainer">
+            <img id="img1" src="../images/Ana1.jpg" alt="lady hair styling">
+            <img id="img1" src="../images/Ana2.jpg" alt="lady hair styling">
             <img id="img1" src="../images/1.jpg" alt="lady hair styling">
             <img id="img2" src="../images/2.jpg" alt="hair style">
             <img id="img3" src="../images/3.jpg" alt="special hair style">
             <img id="img4" src="../images/4.jpg" alt="straightening style">
+            <img id="img1" src="../images/Anna1.jpg" alt="lady hair styling">
+            <img id="img1" src="../images/Anna2.jpg" alt="lady hair styling">
             <img id="img5" src="../images/5.jpg" alt="tint">
             <img id="img6" src="../images/6.jpg" alt="style">
             <img id="img4" src="../images/7.jpg" alt="lady cut">
