--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <img id="img3" src="../images/3.jpg" alt="special hair style">
             <img id="img4" src="../images/4.jpg" alt="straightening style">
             <img id="img1" src="../images/Anna1.jpg" alt="lady hair styling">
-            <img id="img1" src="../images/Anna2.jpg" alt="lady hair styling">
+            <img id="img1" src="../images/Anna2.jpeg" alt="lady hair styling">
             <img id="img5" src="../images/5.jpg" alt="tint">
             <img id="img6" src="../images/6.jpg" alt="style">
             <img id="img4" src="../images/7.jpg" alt="lady cut">
