--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" type="text/css" href="../CSS/fpic.css">
         <link rel="stylesheet" type="text/css" href="../CSS/welcome.css">
         <link rel="stylesheet" type="text/css" href="../CSS/services.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/annotation.css">
         <link rel="stylesheet" type="text/css" href="../CSS/where.css">
         <link rel="stylesheet" type="text/css" href="../CSS/team.css">
         <link rel="stylesheet" type="text/css" href="../CSS/gallery.css">
@@ -41,6 +42,7 @@
             <a href="#contactsection" class="active">Contact</a>
             <a href="#pricesection">Prices</a>
             <a href="#teamsection">Team</a>
+            <a href="https://bymek.simplybook.it/v2/">Online Annotation</a>
             <a href="#servicessection">Services</a>
             <a href="#companysection">Company</a>
             <a href="#homesection">Home</a>
@@ -81,6 +83,17 @@
                 <img id="stylingimg" src="../images/styling.png" alt="styling">
                 <h6>Styling</h6>
             </div>
+        </div>
+        
+        <div class="annotation">
+            <h1>Book your Hairdressing Appointment Online</h1>
+            <p>Click on the button below to book your haircut, <br>
+                blow dry or hairstyling appointment through our <br>
+                online booking system or please call us on the numbers<br>
+                0121 779 2743, 07483 950113 or e- mail us to info@bymek.com</p>
+                <form class="move-btn" method="post" action="https://bymek.simplybook.it/v2/">
+                    <button class="anot-btn" type="submit">Book Now</button>
+                </form>
         </div>
 
         
