--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a href="#contactsection" class="active">Contact</a>
             <a href="#pricesection">Prices</a>
             <a href="#teamsection">Team</a>
-            <a href="https://bymek.simplybook.it/v2/">Online Annotation</a>
+            <a href=>Online Annotation</a>
             <a href="#servicessection">Services</a>
             <a href="#companysection">Company</a>
             <a href="#homesection">Home</a>
@@ -87,11 +87,12 @@
         
         <div class="annotation">
             <h1>Book your Hairdressing Appointment Online</h1>
+            <h2>This tool is under construction</h2>
             <p>Click on the button below to book your haircut, <br>
                 blow dry or hairstyling appointment through our <br>
                 online booking system or please call us on the numbers<br>
                 0121 779 2743, 07483 950113 or e- mail us to info@bymek.com</p>
-                <form class="move-btn" method="post" action="https://bymek.simplybook.it/v2/">
+                <form class="move-btn" method="post" action=>
                     <button class="anot-btn" type="submit">Book Now</button>
                 </form>
         </div>
