--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <p>Click on the button below to book your haircut, <br>
                 blow dry or hairstyling appointment through our <br>
                 online booking system or please call us on the numbers<br>
-                0121 779 2743, 07483 950113 or e- mail us to info@bymek.com</p>
+                0121 779 2743,<br> 07483 950113<br> or e- mail us to <br>info@bymek.com</p>
                 <form class="move-btn" method="post" action="https://www.fresha.com/a/mek-hair-studio-marston-green-39-station-road-2ozrnmoe?pId=433060">
                     <button class="anot-btn" type="submit">Book Now</button>
                 </form>
