--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
                     <ul class="columnf">
                         <li class="title">Social Media</li>
                         <li><a href="https://www.facebook.com/MEK-Hair-Studio-100370185313333" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="" target="_blank"><i class='fa fa-facebook'>&#xf279;</i></a></li>
                     </ul>
                 </div>
             </div>
