--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     <ul class="columnf">
                         <li class="title">Social Media</li>
                         <li><a href="https://www.facebook.com/MEK-Hair-Studio-100370185313333" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="" target="_blank"><i class='fa fa-facebook'>&#xf279;</i></a></li>
+                        <li><a href="https://www.google.com/maps/place/MEK+Hair+Studio/@52.4674753,-1.7546674,17z/data=!3m1!4b1!4m5!3m4!1s0x4870b1d034bc42f9:0x135091c93ebb4685!8m2!3d52.4674753!4d-1.7524787" target="_blank"><i>&#xf279;</i></a></li>
                     </ul>
                 </div>
             </div>
